scraper-plugins/scraper-plugins-core/src/test/resources/scraper/plugins/core/typechecker/ok/echo.yf
---
name: contains
graphs:
  start:
    - {type: EchoNode, put: list, value: ["1","2"]}
