scraper-plugins/scraper-plugins-core/src/test/resources/scraper/plugins/core/typechecker/fail/stringToInt.yf
---
name: full
graphs:
  start:
     - type: EchoNode
       put: i
       value: "10"

     - type: IntConsumerNode
       input: "{i}"
